Размеры текста и фон

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,6 +1,9 @@
 .advantages__title {
-  font-family: @font-light;
   font-weight: 300;
-  font-size: 24px;
+  font-size: @font-size-base + 10px;
   color: @white;
+}
+
+.advantages__img {
+  background-color: @grey;
 }
