--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,7 +1,6 @@
 .button {
-  font-family: @font-bold;
   font-weight: 700;
-  font-size: 18px;
+  font-size: @font-size-base + 4px;
   line-height: 18px;
   text-decoration: none;
   text-align: center;
