--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -3,16 +3,13 @@
 }
 
 .contacts__title {
-  font-family: @font-bold;
   font-weight: 700;
-  font-size: 18;
-  color: @blue-dark;
+  font-size: @font-size-base + 4px;
 }
 
 .contacts__info {
-  font-family: @font-light;
   font-weight: 300;
-  font-size: 24;
+  font-size: @font-size-base + 10px;
   text-decoration: none;
   color: @pink;
 }
