--- a/source/less/blocks/information.less
+++ b/source/less/blocks/information.less
@@ -1,6 +1,4 @@
 .information__title {
-  font-family: @font-light;
   font-weight: 300;
-  font-size: 24;
-  color: @blue-dark;
+  font-size: @font-size-base + 10px;
 }
