--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -1,15 +1,11 @@
 .reviews__author {
-font-family: @font-bold;
 font-weight: 700;
-font-size: 18;
-line-height: 30;
+font-style: normal;
+font-size: @font-size-base + 4px;
+line-height: 30px;
 color: @black;
 }
 
 .reviews__description {
-  font-family: @font-regular;
-  font-weight: 400;
-  font-size: 14;
-  line-height: 30;
-  color: @blue-dark;
+  line-height: 30px;
 }
