--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -2,9 +2,8 @@
   list-style: none;
 }
 .site-list__link {
-  font-family: @font-bold;
   font-weight: 700;
-  font-size: 18px;
+  font-size: @font-size-base + 4px;
   line-height: 32px;
   color: @white;
   text-decoration: none;
