--- a/source/less/blocks/advantage.less
+++ b/source/less/blocks/advantage.less
@@ -4,17 +4,12 @@
 }
 
 .advantage__title {
-  font-family: @font-bold;
   font-weight: 700;
-  font-size: 18px;
+  font-size: @font-size-base + 4px;
   line-height: 24px;
   color: @black;
 }
 
 .advantage__description {
-  font-family: @font-regular;
-  font-weight: 400;
-  font-size: 14px;
   line-height: 24px;
-  color: @blue-dark;
 }
