--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -2,45 +2,32 @@
   background-color: @grey;
 }
 
-.gallery-title {
-  font-family: @font-bold;
+.gallery__title {
   font-weight: 700;
-  font-size: 12;
-  line-height: 24;
+  font-size: @font-size-base - 2px;
+  line-height: 24px;
   text-transform: uppercase;
   color: @white;
 }
 
 .gallery__author {
-  font-family: @font-bold;
-  font-weight: 700;
-  font-size: 14;
-  line-height: 24;
-  color: @blue-dark;
+  line-height: 24px;
 }
 
 .gallery__time {
-  font-family: @font-light;
   font-weight: 300;
-  font-size: 12;
-  line-height: 24;
+  font-size: @font-size-base - 2px;
+  line-height: 24px;
   text-transform: uppercase;
-  color: @blue-dark;
 }
 
 .gallery__content {
-  font-family: @font-regular;
-  font-weight: 400;
-  font-size: 14;
-  line-height: 24;
-  color: @blue-dark;
+  line-height: 24px;
 }
 
 .gallery__likes {
-  font-family: @font-regular;
-  font-weight: 400;
-  font-size: 12;
-  line-height: 24;
+  font-size: @font-size-base - 2px;
+  line-height: 24px;
   text-transform: uppercase;
   color: @pink;
 }
