--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,7 +1,18 @@
-.page-header__title {
+.page-header__index {
   display: none;
-  font-family: @font-light;
   font-weight: 300;
-  font-size: 40px;
+  font-size: @font-size-base + 26px;
+  color: @white;
+}
+
+.page-header__photo {
+  font-weight: 300;
+  font-size: @font-size-base + 10px;
+  color: @white;
+}
+
+.page-header__form {
+  font-weight: 300;
+  font-size: @font-size-base + 10px;
   color: @white;
 }
