--- a/source/less/blocks/unit-copyright.less
+++ b/source/less/blocks/unit-copyright.less
@@ -1,7 +1,3 @@
 .unit-copyright {
-  font-family: @font-regular;
-  font-weight: 400;
-  font-size: 14;
-  line-height: 18;
-  color: @blue-dark;
+  line-height: 18px;
 }
