--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,40 +1,49 @@
-@import "normalize.less";
+@import "normalize";
 @import "variables";
 @import "fonts";
 @import "mixins";
-@import "blocks/page-header.less";
-@import "blocks/main-nav.less";
-@import "blocks/site-list.less";
-@import "blocks/page-main.less";
-@import "blocks/download-app.less";
-@import "blocks/button.less";
-@import "blocks/os-list.less";
-@import "blocks/advantages.less";
-@import "blocks/advantage.less";
-@import "blocks/reviews.less";
-@import "blocks/slider.less";
-@import "blocks/price.less";
-@import "blocks/information.less";
-@import "blocks/contacts.less";
-@import "blocks/page-footer.less";
-@import "blocks/social-list.less";
-@import "blocks/unit-copyright.less";
-@import "blocks/page-form.less";
-@import "blocks/form-contest.less";
-@import "blocks/form-section.less";
-@import "blocks/form.less";
-@import "blocks/form-personal.less";
-@import "blocks/form-feat.less";
-@import "blocks/form-contacts.less";
-@import "blocks/form-app.less";
-@import "blocks/form-comment.less";
-@import "blocks/modal.less";
-@import "blocks/check.less";
-@import "blocks/send.less";
-@import "blocks/page-photo.less";
-@import "blocks/photo-users.less";
-@import "blocks/gallery.less";
-@import "blocks/user-post.less";
-@import "blocks/locate.less";
-@import "blocks/form-tuning.less";
-@import "blocks/visually-hidden.less";
+@import "blocks/page-header";
+@import "blocks/main-nav";
+@import "blocks/site-list";
+@import "blocks/page-main";
+@import "blocks/download-app";
+@import "blocks/button";
+@import "blocks/os-list";
+@import "blocks/advantages";
+@import "blocks/advantage";
+@import "blocks/reviews";
+@import "blocks/slider";
+@import "blocks/price-slider";
+@import "blocks/information";
+@import "blocks/contacts";
+@import "blocks/page-footer";
+@import "blocks/social-list";
+@import "blocks/unit-copyright";
+@import "blocks/page-form";
+@import "blocks/form-contest";
+@import "blocks/form-section";
+@import "blocks/form";
+@import "blocks/form-personal";
+@import "blocks/form-feat";
+@import "blocks/form-contacts";
+@import "blocks/form-app";
+@import "blocks/form-comment";
+@import "blocks/modal";
+@import "blocks/check";
+@import "blocks/send";
+@import "blocks/page-photo";
+@import "blocks/photo-users";
+@import "blocks/gallery";
+@import "blocks/user-post";
+@import "blocks/locate";
+@import "blocks/form-tuning";
+@import "blocks/visually-hidden";
+
+body {
+  font-family: @open-sans;
+  font-size: @font-size-base;
+  line-height: 24px;
+  font-weight: 400;
+  color: @blue-dark;
+  background-color: @white;
+}
