--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,6 +1,4 @@
-@font-light: "Open Sans Light", sans-serif;
-@font-regular: "Open Sans Regular", sans-serif;
-@font-bold: "Open Sans Bold",sans-serif;
+@open-sans: "Open Sans", Arial, sans-serif;
 
 @white: #ffffff;
 @black: #000000;
@@ -9,3 +7,5 @@
 @grey: #f2f2f2;
 @pink: #d22856;
 @green: #2aab6d;
+
+@font-size-base: 14px;
