--- a/source/less/blocks/advantage.less
+++ b/source/less/blocks/advantage.less
@@ -1,15 +1,10 @@
 .advantage {
   list-style: none;
-  background-color: @grey;
+  background-color: @color-grey;
 }
 
 .advantage__title {
   font-weight: 700;
   font-size: @font-size-base + 4px;
-  line-height: 24px;
-  color: @black;
-}
-
-.advantage__description {
-  line-height: 24px;
+  color: @color-black;
 }
