--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,9 +1,8 @@
 .advantages__title {
   font-weight: 300;
   font-size: @font-size-base + 10px;
-  color: @white;
 }
 
 .advantages__img {
-  background-color: @grey;
+  background-color: @color-grey;
 }
