--- a/source/less/blocks/form-tuning.less
+++ b/source/less/blocks/form-tuning.less
@@ -1,7 +1,22 @@
 .form-tuning {
-  background-color: @grey;
+  background-color: @color-grey;
 }
 
 .form-tuning__list {
   list-style: none;
+}
+
+.form-tuning__post {
+  font-size: @font-size-base + 4px;
+  line-height: 18px;
+  font-weight: 700;
+  color: @color-pink;
+}
+
+.form-tuning__cancel {
+  font-size: @font-size-base + 4px;
+  line-height: 18px;
+  font-weight: 700;
+  color: @color-blue-dark;
+  opacity: 0.1;
 }
