--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,14 +1,20 @@
+.form__item {
+  border: none;
+}
+
 .form__submit {
   line-height: 30px;
-  color: @white;
-  background-color: @green;
+  text-transform: uppercase;
+  color: @color-white;
+  background-color: @color-green;
 }
 
 .form__remark {
+  font-size: @font-size-base - 3px;
   line-height: 30px;
   text-transform: uppercase;
 }
 
 .form__remark sup {
-  color: @pink;
+  color: @color-pink;
 }
