--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -2,17 +2,17 @@
   display: none;
   font-weight: 300;
   font-size: @font-size-base + 26px;
-  color: @white;
+  color: @color-white;
 }
 
 .page-header__photo {
   font-weight: 300;
   font-size: @font-size-base + 10px;
-  color: @white;
+  color: @color-white;
 }
 
 .page-header__form {
   font-weight: 300;
   font-size: @font-size-base + 10px;
-  color: @white;
+  color: @color-white;
 }
