--- a/source/less/style.less
+++ b/source/less/style.less
@@ -40,10 +40,10 @@
 @import "blocks/visually-hidden";
 
 body {
-  font-family: @open-sans;
+  font-family: @font-open-sans;
   font-size: @font-size-base;
   line-height: 24px;
   font-weight: 400;
-  color: @blue-dark;
-  background-color: @white;
+  color: @color-blue-dark;
+  background-color: @color-white;
 }
