--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,11 +1,11 @@
-@open-sans: "Open Sans", Arial, sans-serif;
+@font-open-sans: "Open Sans", Arial, sans-serif;
 
-@white: #ffffff;
-@black: #000000;
-@blue-dark: #283645;
-@blue-dark1: #1d2631;
-@grey: #f2f2f2;
-@pink: #d22856;
-@green: #2aab6d;
+@color-white: #ffffff;
+@color-black: #000000;
+@color-blue-dark: #283645;
+@color-blue-dark1: #1d2631;
+@color-grey: #f2f2f2;
+@color-pink: #d22856;
+@color-green: #2aab6d;
 
 @font-size-base: 14px;
