--- a/source/less/blocks/download-app.less
+++ b/source/less/blocks/download-app.less
@@ -5,11 +5,10 @@
 }
 
 .download-app__button {
-  color: @white;
+  color: @color-white;
 }
 
 .download-app__description {
   font-weight: 300;
-  line-height: 24px;
-  color: @white;
+  color: @color-white;
 }
