--- a/source/less/blocks/form-comment.less
+++ b/source/less/blocks/form-comment.less
@@ -1,9 +1,12 @@
 .form-comment__title {
   line-height: 30px;
   text-transform: uppercase;
-  color: @pink;
+  color: @color-pink;
 }
 
 .form-comment__text {
+  font-size: @font-size-base + 4px;
   line-height: 30px;
+  font-weight: 400;
+  color: @color-blue-dark;
 }
