--- a/source/less/blocks/form-contacts.less
+++ b/source/less/blocks/form-contacts.less
@@ -1,10 +1,12 @@
 .form-contacts__label {
   line-height: 30px;
   text-transform: uppercase;
-  color: @pink;
+  color: @color-pink;
 }
 
 .form-contacts__text {
   font-size: @font-size-base + 4px;
   line-height: 30px;
+  font-weight: 400;
+  color: @color-blue-dark;
 }
