--- a/source/less/blocks/form-feat.less
+++ b/source/less/blocks/form-feat.less
@@ -1,11 +1,11 @@
 .form-feat {
-  background-color: @grey;
+  background-color: @color-grey;
 }
 
 .form-feat__title {
   line-height: 18px;
   text-transform: uppercase;
-  color: @pink;
+  color: @color-pink;
 }
 
 .form-feat__label {
