--- a/source/less/blocks/form-personal.less
+++ b/source/less/blocks/form-personal.less
@@ -1,9 +1,12 @@
 .form-personal__label {
   line-height: 30px;
   text-transform: uppercase;
-  color: @pink;
+  color: @color-pink;
 }
 
 .form-personal__text {
   font-size: @font-size-base + 4px;
+  line-height: 30px;
+  font-weight: 400;
+  color: @color-blue-dark;
 }
