--- a/source/less/blocks/photo-users.less
+++ b/source/less/blocks/photo-users.less
@@ -1,7 +1,3 @@
 .photo-users__description {
-  font-family: @font-regular;
-  font-weight: 400;
-  font-size: 14;
-  line-height: 30;
-  color: @blue-dark;
+  line-height: 30px;
 }
