--- a/source/less/blocks/reviews-slider.less
+++ b/source/less/blocks/reviews-slider.less
@@ -3,7 +3,7 @@ font-weight: 700;
 font-style: normal;
 font-size: @font-size-base + 4px;
 line-height: 30px;
-color: @black;
+color: @color-black;
 }
 
 .reviews__description {
