--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -5,7 +5,7 @@
   font-weight: 700;
   font-size: @font-size-base + 4px;
   line-height: 32px;
-  color: @white;
+  color: @color-white;
   text-decoration: none;
   text-transform: uppercase;
 }
