--- a/source/less/blocks/form-personal.less
+++ b/source/less/blocks/form-personal.less
@@ -5,6 +5,7 @@
 }
 
 .form-personal__text {
+  font-family: @font-open-sans;
   font-size: @font-size-base + 4px;
   line-height: 30px;
   font-weight: 400;
