--- a/source/less/blocks/form-tuning.less
+++ b/source/less/blocks/form-tuning.less
@@ -6,17 +6,18 @@
   list-style: none;
 }
 
-.form-tuning__post {
+.form-tuning__btn {
+  font-family: @font-open-sans;
   font-size: @font-size-base + 4px;
   line-height: 18px;
   font-weight: 700;
+}
+
+.form-tuning__btn--post {
   color: @color-pink;
 }
 
-.form-tuning__cancel {
-  font-size: @font-size-base + 4px;
-  line-height: 18px;
-  font-weight: 700;
+.form-tuning__btn--cancel {
   color: @color-blue-dark;
   opacity: 0.1;
 }
