--- a/source/less/blocks/price-slider.less
+++ b/source/less/blocks/price-slider.less
@@ -18,6 +18,6 @@
 
 .price-slider__item {
   line-height: 30px;
-  text-transform: : uppercase;
+  text-transform: uppercase;
   background-color: @color-white;
 }
