--- a/source/less/style.less
+++ b/source/less/style.less
@@ -11,8 +11,7 @@
 @import "blocks/os-list";
 @import "blocks/advantages";
 @import "blocks/advantage";
-@import "blocks/reviews";
-@import "blocks/slider";
+@import "blocks/reviews-slider";
 @import "blocks/price-slider";
 @import "blocks/information";
 @import "blocks/contacts";
