--- a/source/less/blocks/form-feat.less
+++ b/source/less/blocks/form-feat.less
@@ -3,7 +3,10 @@
 }
 
 .form-feat__title {
+  width: 220px;
+  margin: 0 auto;
   line-height: 18px;
+  text-align: center;
   text-transform: uppercase;
   color: @color-pink;
 }
