--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,8 +1,70 @@
+.advantages {
+  width: 320px;
+  min-height: 1002px;
+  box-sizing: border-box;
+  margin: 0 auto;
+  padding-top: 40px;
+  text-align: center;
+}
+
 .advantages__title {
   font-weight: 300;
   font-size: @font-size-base + 10px;
+  line-height: 24px;
 }
 
-.advantages__img {
+.advantages__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  padding-top: 60px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 310px;
+  text-align: center;
+  background: url("../img/bg-triangle-white.svg") no-repeat top;
   background-color: @color-grey;
+}
+
+@media (min-width: @tablet-width) {
+  .advantages {
+    width: @tablet-width;
+    min-height: auto;
+  }
+
+  .advantages__title {
+    font-size: @font-size-base + 26px;
+    line-height: 40px;
+    &--two {
+      width: 340px;
+      margin: 0 auto;
+    }
+  }
+
+  .advantages__list {
+    margin-top: 40px;
+    padding-bottom: 20px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .advantages {
+    width: @desktop-width;
+  }
+
+  .advantages__title {
+    font-size: @font-size-base + 36px;
+    line-height: 50px;
+    &--two {
+      width: 430px;
+    }
+  }
+
+  .advantages__list {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    width: @desktop-width;
+    min-height: 610px;
+  }
 }
