--- a/source/less/blocks/form-app.less
+++ b/source/less/blocks/form-app.less
@@ -2,6 +2,15 @@
   background-color: @color-grey;
 }
 
+.form-app__title {
+  width: 180px;
+  margin: 0 auto;
+  text-align: center;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: @color-pink;
+}
+
 .form-app__label {
   font-size: @font-size-base + 4px;
   line-height: 30px;
