--- a/source/less/blocks/form-comment.less
+++ b/source/less/blocks/form-comment.less
@@ -1,10 +1,14 @@
 .form-comment__title {
   line-height: 30px;
+  text-align: center;
   text-transform: uppercase;
   color: @color-pink;
 }
 
 .form-comment__text {
+  width: 260px;
+  margin: 0 auto;
+  padding: 10px;
   font-family: @font-open-sans;
   font-size: @font-size-base + 4px;
   line-height: 30px;
