--- a/source/less/blocks/form-personal.less
+++ b/source/less/blocks/form-personal.less
@@ -1,3 +1,8 @@
+.form-personal__item {
+  width: 280px;
+  margin: 0 auto;
+}
+
 .form-personal__label {
   line-height: 30px;
   text-transform: uppercase;
@@ -5,6 +10,8 @@
 }
 
 .form-personal__text {
+  width: 250px;
+  padding: 15px;
   font-family: @font-open-sans;
   font-size: @font-size-base + 4px;
   line-height: 30px;
