--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -1,1 +1,38 @@
+.gallery {
+  min-width: 320px;
+  margin: 0 auto;
+}
 
+@media (min-width: @tablet-width) {
+  .gallery {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-sizing: border-box;
+    min-width: @tablet-width;
+  }
+
+  .gallery__item {
+    width: 300px;
+    min-height: 455px;
+  }
+  &--marked {
+    flex-grow: grow;
+    min-height: 630px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .gallery {
+    min-width: @desktop-width;
+  }
+
+  .gallery__item {
+    min-height: 555px;
+  }
+  &--marked {
+    min-height: 604px;
+  }
+}
