--- a/source/less/blocks/os-list.less
+++ b/source/less/blocks/os-list.less
@@ -1,3 +1,9 @@
 .os-list {
   list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  width: 280px;
+  justify-content: space-around;
+  align-items: center;
 }
