--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,8 +1,20 @@
-.page-header__index {
-  display: none;
-  font-weight: 300;
-  font-size: @font-size-base + 26px;
-  color: @color-white;
+.page-header {
+  width: 100%;
+  min-height: 734px;
+  padding: 0;
+}
+
+.page-header__menu {
+  width: 100%;
+  min-height: 67px;
+  box-sizing: border-box;
+  padding-left: 20px;
+  padding-top: 20px;
+  background-color: @color-blue-dark;
+}
+
+.page-header__logo-image {
+  height: 22px;
 }
 
 .page-header__photo {
@@ -13,4 +25,24 @@
 .page-header__form {
   font-weight: 300;
   font-size: @font-size-base + 10px;
+}
+
+@media (min-width: @tablet-width) {
+  .page-header {
+    min-height: 730px;
+  }
+
+  .page-header__menu {
+    min-height: 110px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-header {
+    min-height: 853px;
+  }
+
+  .page-header__menu {
+    min-height: 100px;
+  }
 }
