--- a/source/less/blocks/price-slider.less
+++ b/source/less/blocks/price-slider.less
@@ -1,5 +1,16 @@
 .price-slider {
+  min-width: 320px;
+  margin: 0 auto;
+  padding-top: 130px;
+  text-align: center;
+  background: url("../img/bg-triangle-white.svg") no-repeat top;
   background-color: @color-grey;
+}
+
+.price-slider__list {
+  min-width: 828px;
+  margin: 0 auto;
+  margin-bottom: 40px;
 }
 
 .price-slider__head {
@@ -17,6 +28,8 @@
 }
 
 .price-slider__item {
+  padding: 22px;
+  text-align: left;
   line-height: 30px;
   text-transform: uppercase;
   background-color: @color-white;
