--- a/source/less/style.less
+++ b/source/less/style.less
@@ -11,6 +11,7 @@
 @import "blocks/os-list";
 @import "blocks/advantages";
 @import "blocks/advantage";
+@import "blocks/research";
 @import "blocks/reviews-slider";
 @import "blocks/price-slider";
 @import "blocks/information";
@@ -39,10 +40,19 @@
 @import "blocks/visually-hidden";
 
 body {
+  min-width: 320px;
+  margin: 0;
+  padding: 0;
+
   font-family: @font-open-sans;
   font-size: @font-size-base;
   line-height: 24px;
   font-weight: 400;
   color: @color-blue-dark;
   background-color: @color-white;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
