--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,4 +1,4 @@
-@font-open-sans: "Open Sans", Arial, sans-serif;
+@font-open-sans: "Open Sans", "Arial", sans-serif;
 
 @color-white: #ffffff;
 @color-black: #000000;
@@ -9,3 +9,6 @@
 @color-green: #2aab6d;
 
 @font-size-base: 14px;
+
+@tablet-width: 680px;
+@desktop-width: 1200px;
